# postgresops-control-plane

./: .gitignore  CHANGELOG.md  README.md
postgresops-enterprise/agents/: README.md  pyproject.toml
postgresops-enterprise/agents/src/pgops_agent/: __main__.py  main.py
postgresops-enterprise/backend/: README.md  pyproject.toml
postgresops-enterprise/backend/alembic/: env.py
postgresops-enterprise/backend/alembic/versions/: 001_initial_cluster_registry.py
postgresops-enterprise/backend/src/postgresops/: __init__.py  main.py
postgresops-enterprise/backend/src/postgresops/api/: deps.py  errors.py
postgresops-enterprise/backend/src/postgresops/api/middleware/: request_context.py
postgresops-enterprise/backend/src/postgresops/api/v1/: router.py
postgresops-enterprise/backend/src/postgresops/api/v1/endpoints/: clusters.py  (+2 more)
postgresops-enterprise/backend/src/postgresops/core/: config.py  logging.py
postgresops-enterprise/backend/src/postgresops/db/: session.py
postgresops-enterprise/backend/src/postgresops/models/: __init__.py  cluster.py
postgresops-enterprise/backend/src/postgresops/modules/ai/: __init__.py
postgresops-enterprise/backend/src/postgresops/modules/automation/: __init__.py
postgresops-enterprise/backend/src/postgresops/modules/monitoring/: __init__.py
postgresops-enterprise/backend/src/postgresops/schemas/: cluster.py
postgresops-enterprise/backend/src/postgresops/services/: cluster_service.py  exceptions.py
postgresops-enterprise/backend/src/postgresops/util/: probe.py
postgresops-enterprise/backend/tests/: test_api_surface.py
(+47 files in other folders)
