[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgops-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "pydantic-settings>=2.6"]

[project.scripts]
pgops-agent = "pgops_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]
